update the image alignment css issues

--- a/adjod/adjod/static/css/index.less
+++ b/adjod/adjod/static/css/index.less
@@ -41,6 +41,11 @@ body {
 }
 .clear_both { clear:both; }
 
+/* for setting display none */
+.dn{
+	display:done
+}
+
 /*      navigator     */
 
 .navigator_holder {
